--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="background_yt">#ff000000</color>
     <color name="gray">#d3d3d3</color>
     <color name="black">#000000</color>
+    <color name="discount_color">#ff4000</color>
 </resources>
