--- a/app/src/main/res/layout/item_video_list.xml
+++ b/app/src/main/res/layout/item_video_list.xml
@@ -63,15 +63,17 @@
 
                 <TextView
                     android:id="@+id/video_thumbnail_text_top"
-                    android:layout_width="@dimen/_93sdp"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/_69sdp"
                     android:layout_marginTop="@dimen/_30sdp"
+                    android:layout_marginEnd="8dp"
                     android:fontFamily="@font/brandontext_medium"
                     android:inputType="textMultiLine"
                     android:textColor="@color/background"
                     android:textSize="@dimen/_17ssp"
                     android:textStyle="bold"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
