--- a/app/src/main/res/layout/learn_video_card.xml
+++ b/app/src/main/res/layout/learn_video_card.xml
@@ -95,11 +95,11 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:fontFamily="@font/brandontext_medium"
-                android:maxLines="1"
-                android:singleLine="true"
+                android:maxLines="2"
+                android:singleLine="false"
                 android:text="@string/car_loannndddddddddddd"
                 android:textColor="@color/heading_dark"
-                android:textSize="20sp"
+                android:textSize="@dimen/_14ssp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@+id/cardView2"
