--- a/app/src/main/res/layout/item_video_list.xml
+++ b/app/src/main/res/layout/item_video_list.xml
@@ -82,16 +82,18 @@
 
         <TextView
             android:id="@+id/video_thumbnail_text"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_marginStart="16dp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
             android:fontFamily="@font/brandontext_medium"
-            android:maxLines="2"
-            android:singleLine="false"
+            android:maxLines="1"
+            android:singleLine="true"
             android:text="@string/video_text"
             android:textColor="@color/heading_dark"
             android:textSize="18sp"
+            app:layout_constraintEnd_toEndOf="@+id/cardView"
             app:layout_constraintStart_toStartOf="@+id/cardView"
             app:layout_constraintTop_toBottomOf="@+id/cardView" />
 
