--- a/app/src/main/res/layout/product_grid_card.xml
+++ b/app/src/main/res/layout/product_grid_card.xml
@@ -19,8 +19,8 @@
             app:cardBackgroundColor="#ffffff"
             app:cardCornerRadius="@dimen/_10sdp"
             app:cardElevation="@dimen/_3sdp"
-            app:cardUseCompatPadding="true"
             app:cardPreventCornerOverlap="false"
+            app:cardUseCompatPadding="true"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintDimensionRatio="h,130:168"
             app:layout_constraintTop_toTopOf="parent">
@@ -29,15 +29,27 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-                <ImageView
-                    android:id="@+id/imgproduct"
+                <View
+                    android:id="@+id/imgproduct_container"
                     android:layout_width="@dimen/_130sdp"
                     android:layout_height="0dp"
-                    android:src="@drawable/sample2_390x216"
-                    android:adjustViewBounds="true"
+                    android:background="#f5f5f5"
                     app:layout_constraintDimensionRatio="h,130:72"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent" />
+                    app:layout_constraintStart_toStartOf="parent"></View>
+
+                <ImageView
+                    android:id="@+id/imgproduct"
+                    android:layout_width="@dimen/_90sdp"
+                    android:layout_height="0dp"
+                    android:adjustViewBounds="true"
+                    android:src="@drawable/sample2_390x216"
+                    app:layout_constraintBottom_toBottomOf="@+id/imgproduct_container"
+                    app:layout_constraintDimensionRatio="h,130:72"
+                    app:layout_constraintEnd_toEndOf="@+id/imgproduct_container"
+                    app:layout_constraintHorizontal_bias="0.473"
+                    app:layout_constraintStart_toStartOf="@+id/imgproduct_container"
+                    app:layout_constraintTop_toTopOf="@+id/imgproduct_container" />
 
                 <TextView
                     android:id="@+id/titleproduct"
@@ -57,7 +69,7 @@
                     android:textColor="@color/heading_dark"
                     android:textSize="@dimen/_13ssp"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/imgproduct" />
+                    app:layout_constraintTop_toBottomOf="@+id/imgproduct_container" />
 
                 <TextView
                     android:id="@+id/earnupto"
