--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
         android:gravity="center_horizontal"
         android:text="@string/enter_mobile_number"
         android:textColor="@color/heading_dark"
-        android:textSize="24sp"
+        android:textSize="@dimen/_20ssp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"></TextView>
@@ -66,7 +66,7 @@
         android:layout_height="45dp"
         android:layout_centerHorizontal="true"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="120dp"
+        android:layout_marginTop="@dimen/_40sdp"
         android:layout_marginEnd="8dp"
         android:background="@drawable/round_button"
         android:fontFamily="@font/brandontext_bold"
