--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -384,7 +384,7 @@
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <TextView
-                        android:id="@+id/textView7"
+                        android:id="@+id/disByReckoText"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
@@ -404,8 +404,8 @@
                         android:text="Discount by you"
                         android:textColor="@color/heading_light"
                         android:textSize="18sp"
-                        app:layout_constraintStart_toStartOf="@+id/textView7"
-                        app:layout_constraintTop_toBottomOf="@+id/textView7" />
+                        app:layout_constraintStart_toStartOf="@+id/disByReckoText"
+                        app:layout_constraintTop_toBottomOf="@+id/disByReckoText" />
 
                     <TextView
                         android:id="@+id/actual_price"
@@ -431,9 +431,9 @@
                         android:textColor="@color/discount_color"
                         android:textSize="18sp"
                         android:textStyle="bold"
-                        app:layout_constraintBottom_toBottomOf="@+id/textView7"
+                        app:layout_constraintBottom_toBottomOf="@+id/disByReckoText"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="@+id/textView7" />
+                        app:layout_constraintTop_toTopOf="@+id/disByReckoText" />
 
                     <EditText
                         android:id="@+id/offer_discount_price"
@@ -448,6 +448,8 @@
                         android:textColor="@color/discount_color"
                         android:textSize="18sp"
                         android:textStyle="bold"
+                        android:imeOptions="actionDone"
+                        android:singleLine="true"
                         app:layout_constraintBottom_toBottomOf="@+id/textView10"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="@+id/textView10" />
@@ -486,7 +488,7 @@
                         android:text="@string/your_customer_pays"
                         android:textColor="@color/heading_light"
                         android:textSize="18sp"
-                        app:layout_constraintStart_toStartOf="@+id/textView7"
+                        app:layout_constraintStart_toStartOf="@+id/disByReckoText"
                         app:layout_constraintTop_toBottomOf="@+id/SplitLine_hor2" />
 
                     <TextView
