--- a/app/src/main/res/layout/activity_learn_how_it_works.xml
+++ b/app/src/main/res/layout/activity_learn_how_it_works.xml
@@ -77,6 +77,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:visibility="invisible"
+        android:background="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
