--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,6 +38,7 @@
         android:gravity="center_vertical"
         android:hint=""
         android:textSize="22sp"
+        android:imeOptions="actionDone"
         app:layout_constraintBottom_toBottomOf="@+id/countrycode"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
