--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -172,7 +172,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="16dp"
-                            android:layout_marginTop="6dp"
+                            android:layout_marginTop="16dp"
                             android:fontFamily="@font/brandontext_regular"
                             android:text="@string/get_to_know_more_nabout_all_the_products_nfrom_byju_s"
                             android:textColor="@color/heading_lighter"
@@ -186,7 +186,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="40dp"
                             android:layout_marginStart="8dp"
-                            android:layout_marginTop="32dp"
+                            android:layout_marginTop="28dp"
                             android:layout_marginEnd="8dp"
                             android:layout_marginBottom="16dp"
                             android:checkable="false"
@@ -215,20 +215,29 @@
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
-                    <androidx.cardview.widget.CardView
-                        android:id="@+id/cardView3"
-                        android:layout_width="112dp"
-                        android:layout_height="131dp"
+                    <ImageView
+                        android:layout_width="90dp"
+                        android:layout_height="80dp"
+                        android:background="@drawable/pdf_icon"
                         android:layout_marginEnd="24dp"
-                        android:foregroundGravity="center"
+                        app:layout_constraintCircleRadius="12dp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"/>
+
+                    <!--<androidx.cardview.widget.CardView
+                        android:id="@+id/cardView3"
+                        android:layout_width="90dp"
+                        android:layout_height="80dp"
+                        android:layout_marginEnd="24dp"
                         android:backgroundTint="@color/colorFormMasterHeaderBackground"
+                        android:foregroundGravity="center"
                         app:cardCornerRadius="12dp"
                         app:cardElevation="4dp"
                         app:layout_constraintCircleRadius="12dp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="parent">
 
-                        <!-- this view is currently not visible will remove this when app becomes more stable -->
+
                         <TextView
                             android:id="@+id/product_name"
                             android:layout_width="wrap_content"
@@ -239,16 +248,15 @@
                             android:textAlignment="center"
                             android:textColor="@color/white"
                             android:textSize="24sp"
-                            android:visibility="gone"/>
+                            android:visibility="gone" />
 
                         <ImageView
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:background="@drawable/pdf_icon"
-                            />
+                            android:background="@drawable/pdf_icon" />
 
 
-                    </androidx.cardview.widget.CardView>
+                    </androidx.cardview.widget.CardView>-->
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <View
@@ -288,12 +296,12 @@
                             android:text="@string/share_and_earn"
                             android:textColor="@color/heading_dark"
                             android:textSize="18sp"
-                            app:layout_constraintStart_toStartOf="@+id/textView8"
+                            app:layout_constraintStart_toStartOf="@+id/share_earn_text"
                             app:layout_constraintTop_toTopOf="parent" />
 
                         <TextView
-                            android:id="@+id/textView8"
-                            android:layout_width="wrap_content"
+                            android:id="@+id/share_earn_text"
+                            android:layout_width="@dimen/_130sdp"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="6dp"
                             android:layout_marginEnd="16dp"
@@ -333,7 +341,7 @@
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toBottomOf="@+id/textView8"
+                            app:layout_constraintTop_toBottomOf="@+id/share_earn_text"
                             app:textEndPadding="25dp" />
 
 
